# memory-forensics-tool

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_MACOS.md  SETUP_COMPARISON.md  build_macos.zsh  setup_project.bat  setup_project.zsh
config/: default_config.json
include/: app_logger.hpp  common.hpp  decryption_engine.hpp  dotnet_biginteger_reader.hpp  dotnet_parser.hpp  lua_engine.hpp  memory_scanner.hpp  obscured_biginteger_reader.hpp  platform_compat.hpp  process_manager.hpp
scripts/examples/: basic_scan.lua
scripts/templates/: memory_template
src/: app_logger.cpp  common.cpp  dotnet_biginteger_reader.cpp  dotnet_parser.cpp  lua_engine.cpp  main.cpp  memory_scanner.cpp  obscured_biginteger_reader.cpp  process_manager.cpp
